Closed Bug 480017 Opened 16 years ago Closed 16 years ago

[FIX]Suppressed popups still trigger table pseudoframe construction

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

See bug 162063 comment 48. Patch coming up.
Attached patch Like soSplinter Review
Attachment #363944 - Flags: superreview?(roc)
Attachment #363944 - Flags: review?(roc)
Attachment #363944 - Flags: superreview?(roc)
Attachment #363944 - Flags: superreview+
Attachment #363944 - Flags: review?(roc)
Attachment #363944 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: