Bug 480017.  Suppress misplaced popups before we construct table pseudoframe parents.  r+sr=roc